ensure dropdowns are aligned right if there is no header

--- a/scss/_patterns_code-snippet.scss
+++ b/scss/_patterns_code-snippet.scss
@@ -92,6 +92,11 @@ $color-snippet-heading-bg: rgba($color-x-dark, 0.08);
     .p-code-snippet__dropdowns {
       display: flex;
       flex-shrink: 0;
+      margin-left: $sph-inner--small;
+
+      &:first-child {
+        margin-left: auto;
+      }
     }
 
     .p-code-snippet__dropdown + .p-code-snippet__dropdown {
